--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,12 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 
+.asistant-light {
+  font-family: "Assistant", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+}
 
 .assistant-regular {
   font-family: "Assistant", sans-serif;
