--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&display=swap");
 
 /* For most browsers */
 input[type="number"]::-webkit-inner-spin-button,
@@ -15,7 +15,7 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 
-.asistant-light {
+.assistant-light {
   font-family: "Assistant", sans-serif;
   font-optical-sizing: auto;
   font-weight: 300;
@@ -41,4 +41,40 @@ input[type="number"] {
   font-optical-sizing: auto;
   font-weight: 700;
   font-style: normal;
+}
+
+.card {
+  /* width: 200px; */
+  /* height: 200px; */
+  perspective: 1000px;
+  /* cursor: pointer; */
+}
+
+.card-inner {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transition: transform 0.5s;
+  transform-style: preserve-3d;
+}
+
+.card.flipped .card-inner {
+  transform: rotateY(180deg);
+}
+
+.card-front,
+.card-back {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  backface-visibility: hidden;
+}
+
+.card-front {
+  background-color: #3498db;
+}
+
+.card-back {
+  background-color: #e74c3c;
+  transform: rotateY(180deg);
 }
